added a fading effect on side (dnw)

--- a/src/components/SlidingObject.css
+++ b/src/components/SlidingObject.css
@@ -11,6 +11,7 @@
 .sliders {
   display: flex;
   width: calc(250px * 18);
+
 }
 
 .slide {
@@ -20,3 +21,28 @@
   align-items: center;
   padding: 15px;
 }
+
+/* fade effect */
+
+/* .slider::before,
+.slider::after {
+  background: linear-gradient(to right,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 0) 100%);
+  content: "";
+  height: 100%;
+  position: absolute;
+  width: 15%;
+  z-index: 2;
+}
+
+.slider::before {
+  left: 0;
+  top: 0;
+}
+
+.slider::after {
+  right: 0;
+  top: 0;
+  transform: rotateZ(180deg);
+} */
