added scrolling effect

--- a/src/components/SlidingObject.css
+++ b/src/components/SlidingObject.css
@@ -11,7 +11,17 @@
 .sliders {
   display: flex;
   width: calc(250px * 18);
+  animation: scroll 40s linear infinite;
+}
 
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(calc(-250px * 4));
+  }
 }
 
 .slide {
